# faceless-video-pipeline

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  bgm_fetcher.py  check_video.py  config.py  create_shortcut.py  download_starters.py  install.bat  pyproject.toml  recover_video.py  reddit_automation.py  reddit_fetcher.py  requirements.txt  run.bat  run.sh  setup.py  stop_streamlit.py  test_reddit_fetcher.py  test_rendering.py  test_retention.py  test_split.py  test_ss.py  test_wrap.py  tts_cli.py  tts_engine.py  uploader.py  verify_final.py  video_engine.py  video_fetcher.py
scripts/: sync_branches.py
tests/: test_pipeline.py
